# C-interpreter-

./: .gitignore  CMakeCache.txt  CMakeLists.txt  C_interpreter  Makefile  NFA.c  NFA2.c  NFA69.c  NFA_Constructor.c  NFA_Constructor.h  NFA_to_DFA.c  PrettyPrinter.c  PrettyPrinter.h  README.md  REGEXgrammar.txt  RegexParser.c  RegexParser.h  cmake_install.cmake  lists.c  lists.h  main.c  main.h  reader.c  reader.h
files/: REGEXgrammar  REGEXgrammar.txt  my.txt
